[package]
name = "screeps-timing-annotate"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"

[lib]
proc_macro = true

[dependencies]
screeps-timing = { git = "https://github.com/shanemadden/screeps-timing" }
syn = { version = "2", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1"
